Fixed a spacing issue added options button.

--- a/styles/blitzallpulls.css
+++ b/styles/blitzallpulls.css
@@ -13,7 +13,7 @@ h5, h3 {
 }
 
 #pullRequestTableContainer {
-	height: 100%;
+	height: calc(100% - 40px);
 	overflow: scroll;
 }
 
